Resolved overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 header {
@@ -67,7 +67,7 @@ header nav a:hover {
 main {
     display: flex;
     flex-direction: column;
-    margin-top: 130px;
+    margin-top: 80px;
 }
 
 .make-budget {
@@ -76,6 +76,7 @@ main {
     align-items: center;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 .opacity-0 {
@@ -115,7 +116,7 @@ main {
 
 .slider {
     width: 1360px;
-    height: 600px;
+    height: 800px;
     margin-top: 60px;
     border-radius: 50px;
     overflow: hidden;
@@ -137,11 +138,11 @@ main {
 
 }
 
-
 .about-us {
     display: flex;
     flex-direction: column;
     font-family: "Inter", sans-serif;
+    overflow: hidden;
 }
 
 .first-text {
@@ -239,6 +240,7 @@ main {
     margin-left: -30px;
     color: #E3E3E3;
     margin-top: 80px;
+    overflow: hidden;
 }
 
 .images_services_mobile {
@@ -248,6 +250,7 @@ main {
 .services {
     display: flex;
     margin-top: 80px;
+    overflow: hidden;
 }
 
 .services img {
@@ -391,7 +394,7 @@ footer {
     margin-right: 40px;
 }
 
-@media screen and (min-width: 1200px) and (max-width: 1440px) {
+@media screen and (min-width: 1200px) and (max-width: 1540px) {
     .slider {
         width: 90vw
     }
@@ -456,11 +459,14 @@ footer {
 
 @media screen and (min-width : 800px) and (max-width : 1024px) {
     .slider {
-        width: 900px;
+        width: 80vw
     }
 
     body {
-        border-right: 1px solid black;
+        overflow-x: hidden;
+    }
+
+    .about-us {
         overflow-x: hidden;
     }
 
@@ -492,6 +498,13 @@ footer {
 
     #focus {
         font-size: 125px;
+        max-width: 100vw;
+        overflow-x: hidden;
+    }
+
+    .services {
+        overflow-x: hidden;
+        max-width: 100vw;
     }
 
     .services img {
@@ -502,6 +515,20 @@ footer {
 
     .retangle {
         width: 90vw;
+    }
+
+    .why-us {
+        width: 90vw;
+        align-self: center;
+        border-radius: 10px;
+    }
+
+    .why-us h1 {
+        font-size: 60px;
+    }
+
+    .why-us .subtitle {
+        font-size: 20px;
     }
 
     .retangle-left h1 {
@@ -532,8 +559,7 @@ footer {
 
 @media screen and (max-width : 768px) {
     body {
-        border-right: 1px solid black;
-        overflow-x: hidden;
+        overflow-x: hidden !important;
     }
 
     header {
@@ -541,7 +567,7 @@ footer {
     }
 
     #logo-flamez {
-        margin-right: 40%;
+        margin-right: 30%;
     }
 
     #about,
@@ -558,7 +584,7 @@ footer {
     }
 
     #title {
-        margin-top: 320px;
+        margin-top: 420px;
         font-size: 40px;
     }
 
@@ -571,6 +597,7 @@ footer {
         display: flex;
         align-items: center;
         margin-left: -50px;
+        overflow-x: hidden;
     }
 
     .first-text,
@@ -630,6 +657,7 @@ footer {
 
     .services {
         align-items: center;
+        overflow-x: hidden;
     }
 
     .services img {
@@ -658,7 +686,7 @@ footer {
         min-width: 100vw;
         font-size: 70px;
         margin-left: 0px;
-
+        display: none;
     }
 
     .why-us {
@@ -667,6 +695,7 @@ footer {
         border-radius: 20px;
         height: auto;
         padding-bottom: 35px;
+        margin-left: 0%;
     }
 
     .why-us h1 {
@@ -683,6 +712,7 @@ footer {
     .stamps {
         flex-direction: column;
         margin-top: 0px;
+        margin-left: 0px;
     }
 
     .stamp {
@@ -697,6 +727,7 @@ footer {
         padding-right: 20%;
         padding-left: 20%;
         align-items: center;
+        margin-left: 0%;
 
     }
 
@@ -782,12 +813,12 @@ footer {
         height: 55%;
         border-radius: 15px;
         width: 80vw;
-        margin-top: -100px;
+        margin-top: -50px;
     }
 
     #title {
         font-size: 25px;
-        margin-top: 250px;
+        margin-top: 474px;
     }
 
     #subtitle {
